--- a/index.html
+++ b/index.html
@@ -22,9 +22,86 @@
         </div>
     </header>
 
-    <section>
-        <p>This is a test.</p>
-    </section>
+
+
+    <div class="box">
+        <h2>Colors</h2>
+        <div class="color-grid">
+
+            <div class="color-box lavender-web ">
+                <p class="color-name">Lavender Web</p>
+                <p class="color-hex">#EBEBFF</p>
+            </div>
+
+            <div class="color-box sugar-plum">
+                <p class="color-name">Sugar Plum</p>
+                <p class="color-hex">#914A75</p>
+            </div>
+
+            <div class="color-box french-lilac">
+                <p class="color-name">French Lilac</p>
+                <p class="color-hex">#7E5F8D</p>
+            </div>
+
+            <div class="color-box old-lavender">
+                <p class="color-name">Old Lavender</p>
+                <p class="color-hex">#685F74</p>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <div class="box">
+        <h2>Fonts</h2>
+        <div class="font"></div>
+        <p class="font-name fira-sans">Fira Sans</p>
+        <p class="regular fira-sans">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <p class="bold fira-sans">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <p class="italic fira-sans">You want to tempt the wrath of the whatever from high atop the thing?</p>
+
+
+        <p class="font-name railway">Raleway</p>
+        <p class="regular raleway">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <p class="bold raleway">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <p class="italic raleway">You want to tempt the wrath of the whatever from high atop the thing?</p>
+
+        <p class="font-name laila">Laila</p>
+        <p class="regular laila">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <p class="bold laila">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <p class="italic laila">You want to tempt the wrath of the whatever from high atop the thing?</p>
+        <cite>Line is quoted from <i>The West Wing</i> episode "Election Night" by Aaron Sorkin</cite>
+    </div>
+
+
+
+    <div class="box">
+        <h2>Text Styles</h2>
+        <div class="text"></div>
+        <h1>H1</h1>
+        <ul>
+            <li>Font-weight: 500</li>
+            <li>Font-size: 38</li>
+            <li>Font-family: Raleway </li>
+        </ul>
+        <h2>H2</h2>
+        <ul>
+            <li>Font-weight: 500</li>
+            <li>Font-size: 30</li>
+            <li>Font-family: Laila </li>
+        </ul>
+
+        <p>P: Paragraph</p>
+        <ul>
+            <li>Font-weight: 300</li>
+            <li>Font-size: 24</li>
+            <li>Font-family: Fira Sans </li>
+        </ul>
+    </div>
+
+
+
     <!-- ---- FOOTER ---- -->
     <footer> &copy;<script type="text/javascript">
             document.write(new Date().getFullYear());
