--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
     <div class="box">
         <h2>Text Styles</h2>
         <div class="text"></div>
-        <h1>H1</h1>
+        <h1 class="text-heading">H1</h1>
         <ul>
             <li>Font-weight: 500</li>
             <li>Font-size: 38</li>
             <li>Font-family: Raleway </li>
         </ul>
-        <h2>H2</h2>
+        <h2 class="text-heading">H2</h2>
         <ul>
             <li>Font-weight: 500</li>
             <li>Font-size: 30</li>
             <li>Font-family: Laila </li>
         </ul>
 
-        <p>P: Paragraph</p>
+        <p class="text-para">P: Paragraph</p>
         <ul>
             <li>Font-weight: 300</li>
             <li>Font-size: 24</li>
