minor link edit; cite edit

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p class="regular laila">You want to tempt the wrath of the whatever from high atop the thing?</p>
         <p class="bold laila">You want to tempt the wrath of the whatever from high atop the thing?</p>
         <p class="italic laila">You want to tempt the wrath of the whatever from high atop the thing?</p>
-        <cite>Line is quoted from <i>The West Wing</i> episode "Election Night" by Aaron Sorkin</cite>
+        <cite>Line is from <i>The West Wing</i> episode "Election Night" by Aaron Sorkin</cite>
     </div>
 
 
